--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
+dist: jammy
 language: python
 python:
-  - "3.9"
+  - "3.11"
 # command to install dependencies
 install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - unittest
+  - python -m unittest discover 
